src/objects/ADvendio__DiscussedAdvertiser__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__Advertiser__c</fullName>
        <label>Advertiser</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Visit Reports</relationshipLabel>
        <relationshipName>Discussed_Advertisers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__VisitReport__c</fullName>
        <label>Visit Report</label>
        <referenceTo>ADvendio__EnhancedVisitReport__c</referenceTo>
        <relationshipLabel>Discussed Advertisers</relationshipLabel>
        <relationshipName>Discussed_Advertisers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Discussed Advertiser</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DA-{0}</displayFormat>
        <label>Discussed Advertiser Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discussed Advertisers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>